--- a/app/src/main/res/layout-sw350dp/activity_acraft.xml
+++ b/app/src/main/res/layout-sw350dp/activity_acraft.xml
@@ -67,7 +67,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Aircraft Name"
+            android:text="Aircraft Nickname"
             style="@style/label_text"
             android:layout_weight="4"
             />
@@ -162,90 +162,90 @@
             android:text=""
             android:layout_weight="5" />
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="10"
-        android:visibility="visible">
+    <!--<LinearLayout-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:weightSum="10"-->
+        <!--android:visibility="visible">-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tag Info:"
-            style="@style/label_text"
-            android:layout_weight="5"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="10">
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Tag Info:"-->
+            <!--style="@style/label_text"-->
+            <!--android:layout_weight="5"-->
+            <!--/>-->
+    <!--</LinearLayout>-->
+    <!--<LinearLayout-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:weightSum="10">-->
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            style="@style/label_text"
-            android:text="Make"
-            android:layout_weight="2"
-            />
+        <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--style="@style/label_text"-->
+            <!--android:text="Make"-->
+            <!--android:layout_weight="2"-->
+            <!--/>-->
 
-        <TextView
-            android:id="@+id/txtAcftMake"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:inputType="text"
-            android:layout_weight="8"
-            android:gravity="end"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="10">
+        <!--<TextView-->
+            <!--android:id="@+id/txtAcftMake"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:singleLine="true"-->
+            <!--android:inputType="text"-->
+            <!--android:layout_weight="8"-->
+            <!--android:gravity="end"/>-->
+    <!--</LinearLayout>-->
+    <!--<LinearLayout-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:weightSum="10">-->
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            style="@style/label_text"
-            android:text="Model"
-            android:layout_weight="2"
-            />
+        <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--style="@style/label_text"-->
+            <!--android:text="Model"-->
+            <!--android:layout_weight="2"-->
+            <!--/>-->
 
-        <TextView
-            android:id="@+id/txtAcftModel"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:inputType="text"
-            android:layout_weight="8"
-            android:gravity="end"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="10">
+        <!--<TextView-->
+            <!--android:id="@+id/txtAcftModel"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:singleLine="true"-->
+            <!--android:inputType="text"-->
+            <!--android:layout_weight="8"-->
+            <!--android:gravity="end"/>-->
+    <!--</LinearLayout>-->
+    <!--<LinearLayout-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:weightSum="10">-->
 
-        <TextView
-            android:layout_width="0dp"
-            style="@style/label_text"
-            android:layout_height="wrap_content"
-            android:text="Series"
-            android:layout_weight="2"
-            />
+        <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--style="@style/label_text"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Series"-->
+            <!--android:layout_weight="2"-->
+            <!--/>-->
 
-        <TextView
-            android:id="@+id/txtAcftSeries"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:inputType="text"
-            android:layout_weight="8"
-            android:gravity="end"/>
-    </LinearLayout>
+        <!--<TextView-->
+            <!--android:id="@+id/txtAcftSeries"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:singleLine="true"-->
+            <!--android:inputType="text"-->
+            <!--android:layout_weight="8"-->
+            <!--android:gravity="end"/>-->
+    <!--</LinearLayout>-->
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="20dp"
