--- a/app/src/main/res/layout/activity_simple_settings.xml
+++ b/app/src/main/res/layout/activity_simple_settings.xml
@@ -89,6 +89,12 @@ android:weightSum="100"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textAppearance="@android:style/TextAppearance.Holo" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="0.7"
+            android:layout_height="wrap_content"
+            style="@style/label_text"
+            />
 
         <TextView
             android:id="@+id/txtWebsitePsw"
