--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,49 +58,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal"
-        android:weightSum="10">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="4"
-            android:layout_height="fill_parent"
-            android:text="@string/label_interval"
-            style="@style/label_text_small"
-            android:gravity="center_vertical" />
-        <Spinner
-            android:layout_width="0dp"
-            android:layout_weight="6"
-            android:layout_height="fill_parent"
-            android:id="@+id/spinnerId"
-            android:textAlignment="gravity"
-            android:gravity="end" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:weightSum="10">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="4"
-            android:layout_height="fill_parent"
-            android:text="@string/label_minspeed"
-            style="@style/label_text_small"
-            android:gravity="center_vertical" />
-        <Spinner
-            android:id="@+id/spinnerMinSpeedId"
-            android:layout_width="0dp"
-            android:layout_weight="6"
-            android:layout_height="match_parent"
-            android:textAlignment="textEnd"
-            android:gravity="end"
-            />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="35dp"
         android:orientation="horizontal"
         android:weightSum="10">
         <TextView
@@ -122,7 +80,74 @@
             android:scaleY="2"
             android:gravity="fill" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:orientation="horizontal"
+        android:weightSum="10">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="4"
+            android:layout_height="fill_parent"
+            android:text="@string/label_interval"
+            style="@style/label_text_small"
+            android:gravity="center_vertical" />
+        <Spinner
+            android:layout_width="0dp"
+            android:layout_weight="6"
+            android:layout_height="fill_parent"
+            android:id="@+id/spinnerId"
+            android:textAlignment="gravity"
+            android:gravity="end" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:orientation="horizontal"
+        android:weightSum="10">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="4"
+            android:layout_height="fill_parent"
+            android:text="@string/label_minspeed"
+            style="@style/label_text_small"
+            android:gravity="center_vertical" />
+        <Spinner
+            android:id="@+id/spinnerMinSpeedId"
+            android:layout_width="0dp"
+            android:layout_weight="6"
+            android:layout_height="match_parent"
+            android:textAlignment="textEnd"
+            android:gravity="end"
+            />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="10">
+
+        <TextView
+            android:id="@+id/txtCache"
+            style="@style/label_text_small"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="9"
+            android:inputType="text"
+            android:text="@string/label_cachedpoints" />
+
+        <TextView
+            android:id="@+id/txtCached"
+            style="@style/label_text"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="start"
+            android:layout_weight="1" />
+
+
+    </LinearLayout>
     <!--<LinearLayout-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content"-->
